--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>fed starter kit</title>
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="address=no">
+
+    <title>Title</title>
 
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/vendors/jquery-2.1.4.min.js"></script>
-    <script src="js/index.min.js"></script>
+
 </head>
 <body>
 
@@ -18,5 +22,7 @@
     </div>
     <!-- /site -->
 
+    <script src="js/vendors/jquery-2.1.4.min.js"></script>
+    <script src="js/index.min.js"></script>
 </body>
 </html>
