--- a/app/ui.html
+++ b/app/ui.html
@@ -56,9 +56,9 @@
             <h2 class="ui__sub-title">Controls</h2>
             <!-- /ui__sub-title -->
 
-            <!-- ui__ -->
+            <!-- ui__sub-title2 -->
             <h3 class="ui__sub-title2">Buttons</h3>
-            <!-- /ui__ -->
+            <!-- /ui__sub-title2 -->
 
             <dl>
                 <dt>Dependency:</dt>
@@ -81,6 +81,31 @@
                     <!-- /ui__class -->
 
                     <div class="btn btn_2"><span>Отправить</span></div>
+
+                </div>
+            </div>
+            <!-- /ui__example -->
+
+            <!-- ui__sub-title2 -->
+            <h3 class="ui__sub-title2">Select</h3>
+            <!-- /ui__sub-title2 -->
+
+            <dl>
+                <dt>Dependency:</dt>
+                <dd>sass/_websters-select.scss</dd>
+                <dd>js/vendors/jquery.nicescroll.min.js</dd>
+                <dd>js/jquery.websters-select.js</dd>
+            </dl>
+
+            <!-- ui__example -->
+            <div class="ui__example">
+                <div>
+
+                    <select class="">
+                        <option value="0" selected>0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
 
                 </div>
             </div>
@@ -113,6 +138,7 @@
 
 
     <script src="js/vendors/jquery-2.1.4.min.js"></script>
+    <script src="js/vendors/jquery.nicescroll.min.js"></script>
     <script src="js/ui.min.js"></script>
 </body>
 </html>
