--- a/app/ui.html
+++ b/app/ui.html
@@ -115,6 +115,38 @@
         </div>
         <!-- /ui__item -->
 
+        <!-- ui__item -->
+        <div class="ui__item">
+
+            <!-- ui__sub-title -->
+            <h2 class="ui__sub-title">Popup</h2>
+            <!-- /ui__sub-title -->
+
+            <!-- ui__sub-title2 -->
+            <h3 class="ui__sub-title2">Popup buttons</h3>
+            <!-- /ui__sub-title2 -->
+
+            <dl>
+                <dt>Dependency:</dt>
+                <dd>sass/_popup.scss</dd>
+                <dd>js/jquery.popup.js</dd>
+            </dl>
+
+            <!-- ui__example -->
+            <div class="ui__example">
+
+                <!-- ui__class -->
+                <div class="ui__class">popup__open( data-popup="example" )</div>
+                <!-- /ui__class -->
+
+                <button class="btn popup__open" data-popup="example">Open popup</button>
+
+            </div>
+            <!-- /ui__example -->
+
+        </div>
+        <!-- /ui__item -->
+
     </div>
     <!-- /ui -->
 
@@ -125,7 +157,13 @@
         <div class="popup__wrap">
 
             <!-- popup__content -->
-            <div class="popup__content popup__text">
+            <div class="popup__content popup__example">
+                
+                <!-- popup__close -->
+                <div class="popup__close">
+                    
+                </div>
+                <!-- /popup__close -->
 
             </div>
             <!-- /popup__content -->
