ui checkbox & radio

--- a/app/ui.html
+++ b/app/ui.html
@@ -111,6 +111,111 @@
             </div>
             <!-- /ui__example -->
 
+            <!-- ui__sub-title2 -->
+            <h3 class="ui__sub-title2">Nice Radio</h3>
+            <!-- /ui__sub-title2 -->
+
+            <dl>
+                <dt>Dependency:</dt>
+                <dd>sass/_nice-radio.scss</dd>
+            </dl>
+
+            <!-- ui__example -->
+            <div class="ui__example">
+                <div>
+                    <!-- ui__class -->
+                    <div class="ui__class">.nice-radio</div>
+                    <!-- /ui__class -->
+
+                    <!-- nice-radio -->
+                    <div class="nice-radio">
+                        <input type="radio" id="r1" name="radio" checked>
+                        <label for="r1">Radio 1</label>
+                    </div>
+                    <!-- /nice-radio -->
+
+                </div>
+                <div>
+                    <!-- ui__class -->
+                    <div class="ui__class">.nice-radio</div>
+                    <!-- /ui__class -->
+
+                    <!-- nice-radio -->
+                    <div class="nice-radio">
+                        <input type="radio" id="r2" name="radio">
+                        <label for="r2">Radio 2</label>
+                    </div>
+                    <!-- /nice-radio -->
+
+                </div>
+                <div>
+                    <!-- ui__class -->
+                    <div class="ui__class">.nice-radio</div>
+                    <!-- /ui__class -->
+
+                    <!-- nice-radio -->
+                    <div class="nice-radio">
+                        <input type="radio" id="r3" name="radio" disabled>
+                        <label for="r3">Radio 3</label>
+                    </div>
+                    <!-- /nice-radio -->
+
+                </div>
+            </div>
+            <!-- /ui__example -->
+
+            <!-- ui__sub-title2 -->
+            <h3 class="ui__sub-title2">Nice checkbox</h3>
+            <!-- /ui__sub-title2 -->
+
+            <dl>
+                <dt>Dependency:</dt>
+                <dd>sass/_nice-checkbox.scss</dd>
+            </dl>
+
+            <!-- ui__example -->
+            <div class="ui__example">
+                <div>
+                    <!-- ui__class -->
+                    <div class="ui__class">.nice-checkbox</div>
+                    <!-- /ui__class -->
+
+                    <!-- nice-radio -->
+                    <div class="nice-checkbox">
+                        <input type="checkbox" id="ch1" name="checkbox" checked>
+                        <label for="ch1">Checkbox 1</label>
+                    </div>
+                    <!-- /nice-radio -->
+
+                </div>
+                <div>
+                    <!-- ui__class -->
+                    <div class="ui__class">.nice-checkbox</div>
+                    <!-- /ui__class -->
+
+                    <!-- nice-radio -->
+                    <div class="nice-checkbox">
+                        <input type="checkbox" id="ch2" name="checkbox">
+                        <label for="ch2">Checkbox 2</label>
+                    </div>
+                    <!-- /nice-radio -->
+
+                </div>
+                <div>
+                    <!-- ui__class -->
+                    <div class="ui__class">.nice-checkbox</div>
+                    <!-- /ui__class -->
+
+                    <!-- nice-radio -->
+                    <div class="nice-checkbox">
+                        <input type="checkbox" id="ch3" name="checkbox" disabled>
+                        <label for="ch3">Checkbox 3</label>
+                    </div>
+                    <!-- /nice-radio -->
+
+                </div>
+            </div>
+            <!-- /ui__example -->
 
         </div>
         <!-- /ui__item -->
@@ -175,7 +280,7 @@
     <!-- /popup -->
 
 
-    <script src="js/vendors/jquery-2.1.4.min.js"></script>
+    <script src="js/vendors/jquery-2.2.1.min.js"></script>
     <script src="js/vendors/jquery.nicescroll.min.js"></script>
     <script src="js/ui.min.js"></script>
 </body>
