--- a/app/ui.html
+++ b/app/ui.html
@@ -108,6 +108,16 @@
                     </select>
 
                 </div>
+
+                <div>
+
+                    <select class="">
+                        <option value="0" selected>0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
+
+                </div>
             </div>
             <!-- /ui__example -->
 
