--- a/app/ui.html
+++ b/app/ui.html
@@ -262,6 +262,74 @@
         </div>
         <!-- /ui__item -->
 
+        <!-- ui__item -->
+        <div class="ui__item">
+
+            <!-- ui__sub-title -->
+            <h2 class="ui__sub-title">Tabs</h2>
+            <!-- /ui__sub-title -->
+
+            <dl>
+                <dt>Dependency:</dt>
+                <dd>sass/_tabs.scss</dd>
+                <dd>js/jquery.tabs.js</dd>
+            </dl>
+
+            <!-- ui__example -->
+            <div class="ui__example">
+
+                <div>
+
+                    <div class="tabs">
+                        <dl>
+                            <dt>tab 1</dt>
+                            <dd>
+                                <div class="tabs__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                </div>
+                            </dd>
+                            <dt>tab 2</dt>
+                            <dd>
+                                <div class="tabs__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                </div>
+                            </dd>
+                            <dt>tab 3</dt>
+                            <dd>
+                                <div class="tabs__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                </div>
+                            </dd>
+                            <dt>tab 4</dt>
+                            <dd>
+                                <div class="tabs__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                </div>
+                            </dd>
+                            <dt>tab 5</dt>
+                            <dd>
+                                <div class="tabs__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, dolorem eos error fugit ipsum laudantium magni minus quam, recusandae repellendus saepe unde veniam, voluptatem? Doloremque ducimus neque odio quam soluta!
+                                </div>
+                            </dd>
+
+                        </dl>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+            <!-- /ui__example -->
+
+        </div>
+        <!-- /ui__item -->
+
     </div>
     <!-- /ui -->
 
@@ -292,6 +360,7 @@
 
     <script src="js/vendors/jquery-2.2.1.min.js"></script>
     <script src="js/vendors/jquery.nicescroll.min.js"></script>
+    <script src="js/tabs.min.js"></script>
     <script src="js/ui.min.js"></script>
 </body>
 </html>
