--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,6 @@
 
 
     <script src="js/vendors/jquery-2.2.1.min.js"></script>
-    <script src="js/index.min.js"></script>
+    <script src="js/jquery.index.min.js"></script>
 </body>
 </html>
