--- a/app/ui.html
+++ b/app/ui.html
@@ -360,7 +360,6 @@
 
     <script src="js/vendors/jquery-2.2.1.min.js"></script>
     <script src="js/vendors/jquery.nicescroll.min.js"></script>
-    <script src="js/tabs.min.js"></script>
-    <script src="js/ui.min.js"></script>
+    <script src="js/jquery.index.min.js"></script>
 </body>
 </html>
